zg 10.10.2016 16:33:04 +0200 - build 4818

1. 0003325: Detect external file editing and post back to plugin.

drkns 10.10.2016 02:27:15 +0200 - build 4817

1. Уточнение 4816.

drkns 09.10.2016 21:48:44 +0200 - build 4816

1. Рефакторинг.

drkns 09.10.2016 01:42:02 +0200 - build 4815

1. Уточнение 4796.4.

2. В makefile_vc можно выключать LTCG для отладочных целей.

3. Команды из svn_tag_build_ssl.m4 переехали в svn_tag_build_ssl.bat.
   Также теперь оно явно показывает, какой тег собирается создавать.

drkns 08.10.2016 15:14:07 +0200 - build 4814

1. В режиме постоянных блоков сбрасывалось выделение в строке при замене.

zg 08.10.2016 13:51:32 +0200 - build 4813

1. 0003324: Find/Replace in editor does not highlight found entries.

drkns 08.10.2016 10:38:23 +0200 - build 4812

1. Обход очередного бага VS.

drkns 08.10.2016 02:27:23 +0200 - build 4811

1. Продолжение 4810.2.

drkns 08.10.2016 01:10:06 +0200 - build 4810

1. Ещё раз о флагах консоли: вместо создания с нуля наследуем существующие и меняем только то, что нам нужно.

2. Рефакторинг.

drkns 06.10.2016 22:59:17 +0200 - build 4809

1. Не сохранялись флаги консоли ENABLE_AUTO_POSITION и ENABLE_INSERT_MODE:
   - окно могло неоптимально позиционироваться при разворачивании;
   - запущенный из фара, например, cmd мог внезапно оказаться в режиме 'overwrite'.

2. Пара мелочей.

zg 06.10.2016 19:59:25 +0200 - build 4808

1. уточнение 4803 для вложенных диалогов.

2. уточнение 4807.

zg 05.10.2016 20:37:13 +0200 - build 4807

1. уточнение 4803 для граббера.

drkns 04.10.2016 09:47:59 +0200 - build 4806

1. Уточнение 4794 & 4805.

drkns 03.10.2016 21:28:23 +0200 - build 4805

1. 0003318: "Message not found" errors when opening F9 > Options > Colors

drkns 02.10.2016 18:45:31 +0200 - build 4804

1. Рефакторинг.

zg 01.10.2016 18:23:05 +0200 - build 4803

1. 0003051: Вызов ECTL_REDRAW из диалога.

drkns 01.10.2016 14:28:21 +0200 - build 4802
